--- a/Stylesheets/Buttons.css
+++ b/Stylesheets/Buttons.css
@@ -18,6 +18,12 @@
 	width: 50px;
 	height: 50px;
 }
+#leftBtn {
+background-image: url("./Sprites/onscreenControls/Left.png");
+}
+#rightBtn {
+background-image: url("./Sprites/onscreenControls/Right.png");   
+}
 #homeScreen {
 	position: fixed;
 	top: 0px;
